<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="2dp" >

    <LinearLayout
        android:id="@+id/popupLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/downbutton_corner"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:orientation="vertical"
            android:padding="2dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/rp_bg_slider" >

                <TextView
                    android:id="@+id/txtActivityTitle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="12"
                    android:text="@string/app_name"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" >

                    <ImageView
                        android:id="@+id/imageMap"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="right"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/ic_map" />

                    <ImageView
                        android:id="@+id/imageLike"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="right"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/ic_unrate" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtSpeaker"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/rp_bg_slider"
                android:paddingLeft="8dp"
                android:paddingTop="6dp"
                android:text="@string/detailtitle"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtSpeakerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/rp_bg_slider"
                android:minHeight="32dp"
                android:paddingLeft="8dp"
                android:paddingTop="6dp"
                android:text="@string/detailtitle"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/rp_bg_slider"
                android:paddingLeft="8dp"
                android:paddingTop="6dp"
                android:text="@string/detailtitle"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPlace"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/rp_bg_slider"
                android:paddingLeft="8dp"
                android:paddingTop="6dp"
                android:text="@string/detailtitle"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDecription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rp_bg_slider"
                android:maxHeight="240dp"
                android:minHeight="180dp"
                android:paddingLeft="8dp"
                android:paddingTop="6dp"
                android:scrollbars="vertical"
                android:text="@string/txtdecription"
                android:textColor="#fff"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>